Suppress icon file extension in desktop entry
error: (will be fatal in the future): value "xca-32x32.xpm" for
key "Icon" in group "Desktop Entry" is an icon name with an
extension, but there should be no extension as described in
the Icon Theme Specification if the value is not an absolute path

remove the file extension from the icon file name in the desktop entry file.

Signed-off-by: Christian Hohnstaedt <chohnstaedt@innominate.com>

--- a/misc/xca.desktop
+++ b/misc/xca.desktop
@@ -7,7 +7,7 @@ Comment[de]=Eine graphische Oberfläche zur Erstellung von X.509 konformen Zerti
 Comment[fi]=Graafinen X.509-varmenteiden hallintatyökalu
 Comment[fr]=Création et gestion de certificats conformes à la norme X.509
 Exec=xca %F
-Icon=xca-32x32.xpm
+Icon=xca-32x32
 Terminal=false
 Categories=Application;Utility;Qt;
 MimeType=application/x-xca-database;application/x-xca-template;application/x-x509-ca-cert;application/pkcs10;application/x-pkcs7-certificates;application/x-pkcs12;
