Add xca_db_stat for displaying database structure and content

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -17,6 +17,6 @@ OBJS=$(patsubst %, %.o, $(NAMES)) $(patsubst %, moc_%.o, $(MOCNAMES))
 include $(TOPDIR)/Rules.mak
 sinclude .depend
 
-db_dump$(SUFFIX): db_dump.o db.o db.h
+xca_db_stat$(SUFFIX): xca_db_stat.o db.o db.h
 	@$(PRINT) "  LINK   $@"
-	$(CC) $(CPPFLAGS) $(LDFLAGS) $(CFLAGS) db_dump.o db.o $(LIBS) -g -o $@
+	$(CC) $(CPPFLAGS) $(LDFLAGS) $(CFLAGS) xca_db_stat.o db.o $(LIBS) -g -o $@
