Add documentation for xca_db_stat

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -5,10 +5,10 @@ endif
 
 DELFILES=xca*.html xca.1.gz
 
-doc: xca.1.gz xca.html
+doc: xca.1.gz xca_db_stat.1.gz xca.html
 include $(TOPDIR)/Rules.mak
 
-xca.1.gz: xca.1
+%.1.gz: %.1
 	gzip -9 <$^ >$@
 
 xca.html: xca.sgml
@@ -18,11 +18,11 @@ xca.html: xca.sgml
 	@$(PRINT) "  DOC    [$(BASENAME)] $@"
 	$(LINUXDOC) -B html $< >/dev/null
 
-install: xca.1.gz xca.html
+install: $(doc)
 	install -m 755 -d $(destdir)$(htmldir) \
 		$(destdir)$(mandir)/man1
 	install -m 644 xca*.html $(destdir)$(htmldir)
-	install xca.1.gz $(destdir)/$(mandir)/man1
+	install *.1.gz $(destdir)/$(mandir)/man1
 
 app: xca.html
 	mkdir -p $(APPDIR)/Resources
