Support sgml2html next to linuxdoc to create the HTML docs

--- a/Local.mak.in
+++ b/Local.mak.in
@@ -16,7 +16,7 @@ LRELEASE=@QT_LRELEASE@
 
 CC=@CXX@
 STRIP=@STRIP@
-LINUXDOC=@LINUXDOC@
+DOCTOOL=@DOCTOOL@
 MACDEPLOYQT=@MACDEPLOYQT@
 DARWIN=@DARWIN@
 
