Silence compiler warnings about unused parameters

--- a/Local.mak.in
+++ b/Local.mak.in
@@ -6,7 +6,7 @@ export TOPDIR=@abs_srcdir@
 export VERSION=@PACKAGE_VERSION@
 
 CPPFLAGS=-DXCA_PREFIX=\"${xca_prefix}\" -DETC=\"@sysconfdir@\" -DDOCDIR=\"@docdir@\" @CXXFLAGS@
-CFLAGS=-Wall -ggdb -O2
+CFLAGS=-Wall -Wextra -O2
 LIBS=@LIBS@
 
 MOC=@QT_MOC@
