Inherit CPPFLAGS and CFLAGS from the build environment
Do not clear CPPFLAGS and CFLAGS in Local.mk. Users who want to supply
special flags don't have to edit the source anymore but can set the
corresponding variable in the build environment.

--- a/Local.mak.in
+++ b/Local.mak.in
@@ -5,8 +5,8 @@
 export TOPDIR=@abs_srcdir@
 export VERSION=@PACKAGE_VERSION@
 
-CPPFLAGS=-DXCA_PREFIX=\"${xca_prefix}\" -DETC=\"@sysconfdir@\" -DDOCDIR=\"@docdir@\" @CXXFLAGS@
-CFLAGS=-Wall -Wextra -O2
+CPPFLAGS+=-DXCA_PREFIX=\"${xca_prefix}\" -DETC=\"@sysconfdir@\" -DDOCDIR=\"@docdir@\" @CXXFLAGS@
+CFLAGS+=-Wall -Wextra -O2
 LIBS=@LIBS@
 
 MOC=@QT_MOC@
