build: add --disable-doc to disable doc installation

--- a/Local.mak.in
+++ b/Local.mak.in
@@ -19,6 +19,7 @@ STRIP=@STRIP@
 DOCTOOL=@DOCTOOL@
 MACDEPLOYQT=@MACDEPLOYQT@
 DARWIN=@DARWIN@
+ENABLE_DOC=@ENABLE_DOC@
 
 PACKAGE_TARNAME=@PACKAGE_TARNAME@
 HOST=linux
