--- a/widgets/Makefile
+++ b/widgets/Makefile
@@ -9,7 +9,7 @@ MOC_NAMES=MainWindow KeyDetail clicklabel XcaTreeView NewX509 \
 	ImportMulti CrlDetail ExportDialog hashBox Options NewKey kvView \
 	NewCrl SearchPkcs11 RevocationList XcaProxyModel XcaHeaderView \
 	KeyTreeView TempTreeView ReqTreeView X509SuperTreeView CertTreeView \
-	OidResolver
+	OidResolver OpenDb
 
 NAMES=$(MOC_NAMES) NewX509_ext MW_menu MW_help MW_database
 OBJS=$(patsubst %,moc_%.o,$(MOC_NAMES)) $(patsubst %,%.o,$(NAMES))
