Fix MacOSX installatoin after "Cleanup the OID text files"
commit 3f35cdccf89cfa2b30fe51ef113463111dc506dd
did break the MacOSX installation of dn.txt

--- a/misc/Makefile
+++ b/misc/Makefile
@@ -40,5 +40,5 @@ install:
 app:
 	mkdir -p $(APPDIR)/Resources
 	install -m 644 $(SRCPATH)Info.plist $(SRCPATH)PkgInfo $(APPDIR)
-	install -m 644 $(SRCPATH)*.txt $(SRCPATH)*.xca $(APPDIR)/Resources
+	install -m 644 $(CONFIG_OBJ) $(SRCPATH)*.xca $(APPDIR)/Resources
 
