Improve changelog.html

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -31,8 +31,8 @@ app: xca.html
 
 changelog.html: $(TOPDIR)/changelog $(TOPDIR)/doc/html.header
 	( cat $(TOPDIR)/doc/html.header; \
-	  echo '</head><body><div><ul>'; \
-	  sed  's/&/\&amp;/g; s/</\&lt;/g; s/>/\&gt;/g; s/^xca \([0-9\.]*\) \(.*\)/<\/ul><\/div><div id="changelog_\1"><h3>xca \1 \2<\/h3><ul>/; s/\*/<\/li><li>/'; \
+	  echo '</head><body><h2>Changelog</h2><div><ul>'; \
+	  sed  's/&/\&amp;/g; s/</\&lt;/g; s/>/\&gt;/g; s/^xca \([^ ]*\) *\(.*\)/<\/ul><\/div><div id="changelog_\1"><h3>xca \1 \2<\/h3><ul>/; s/\*/<\/li><li>/'; \
 	  echo '</body></html>' \
 	) < $< > $@
 
